# PapyrusAI

./: LICENSE  README.md  docker-compose.yml  main.py  requirements.txt  ui.py  vector.py
backend/: Dockerfile  chat_history.py  main.py  ocr.py  pyproject.toml  requirements.txt  server.py
backend/data/uploaded_files/: chroma.sqlite3
chroma_db/: chroma.sqlite3
conversation_history/: chroma.sqlite3
database/: chroma.sqlite3
frontend/: pyproject.toml  ui.py
