[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.120.2",
    "fastembed>=0.7.3",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.0.0",
    "prometheus-client>=0.23.1",
    "pypdf>=6.6.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.38.0",
]
